<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlHighlight"
    tools:context="com.keshe.zhi.easywords.Activities.RegisterActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/textView54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="0dp"
                android:text="登录"
                android:onClick="goLogin"
                android:textColor="#43b335"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView47"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView47" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="注册账号"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_left" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/login_box_bg"
        android:orientation="vertical"
        android:paddingBottom="@dimen/linearlayout2_padding"
        android:paddingLeft="@dimen/start1"
        android:paddingRight="@dimen/end1"
        android:paddingTop="@dimen/top1"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_acount"
                android:textSize="@dimen/name_size2" />

            <EditText
                android:id="@+id/et_new_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_pass_name_bg"
                android:hint="@string/et_new_name"
                android:maxLength="20"
                android:padding="@dimen/et_new_name_padding"
                android:textSize="@dimen/name_etsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_passwd"
                android:textSize="@dimen/name_size2" />

            <EditText
                android:id="@+id/et_new_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/et_new_passwd_marginbottom"
                android:background="@drawable/edit_pass_name_bg"
                android:hint="@string/et_new_passed"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="@dimen/et_new_passwd_padding"
                android:textSize="@dimen/name_etsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_check"
                android:textSize="@dimen/name_size2" />

            <EditText
                android:id="@+id/et_passwd_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/et_pass_check_marginbottom"
                android:background="@drawable/edit_pass_name_bg"
                android:hint="@string/et_pass_check"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="@dimen/et_pass_check_padding"
                android:textSize="@dimen/name_etsize" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_regis_real"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rigister_btn_bg"
        android:onClick="registerACount"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="@dimen/name_size"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout2"
        app:layout_constraintRight_toRightOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <FrameLayout
        android:id="@+id/reg_frg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">


    </FrameLayout>

</android.support.constraint.ConstraintLayout>
